# flake8-if-expr

./: README.md  makefile  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  feature.md  pull_request_template.md
.github/workflows/: ci.yml  release-draft.yml  release.yml  set-labels.yml  verify-lables.yml
flake8_if_expr/: __init__.py  checker.py
tests/: test_flake8_if_expr.py
