[tool.poetry]
name = "flake8-if-expr"
version = "1.0.0"
description = "The plugin checks `if expressions` (ternary operator)"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-if-expr"
homepage = "https://pypi.org/project/flake8-if-expr"
keywords = ['flake8', 'linter']

[tool.poetry.plugins."flake8.extension"]
IF100 = 'flake8_if_expr:IfExprPlugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allows-prereleases = true}
flake8 = "^3.7"
flake8-builtins = "^1.5"
flake8-comprehensions = "^3.2"
flake8-eradicate = "^0.3.0"
flake8-isort = "^2.8"
flake8-logging-format = "^0.6.0"
flake8-pie = "^0.5.0"
flake8-pytest = "^1.3"
flake8-quotes = "^2.1"
mypy = "^0.770"
pep8-naming = "^0.9.1"
pylint = "^2.4"
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-mock = "^2.0"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
