[tool.poetry]
name = "flake8-if-expr"
version = "1.0.4"
description = "The plugin checks `if expressions` (ternary operator)"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-if-expr"
homepage = "https://pypi.org/project/flake8-if-expr"
keywords = ['flake8', 'linter']

[tool.poetry.plugins."flake8.extension"]
IF100 = 'flake8_if_expr:IfExprPlugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
codecov = "^2.1.7"
flake8 = "^3.8"
flake8-builtins = "^1.5"
flake8-comprehensions = "^3.2"
flake8-eradicate = "^0.3.0"
flake8-isort = "^3.0"
flake8-logging-format = "^0.6.0"
flake8-pie = "^0.5.0"
flake8-pytest = "^1.3"
flake8-quotes = "^3.2"
mypy = "^0.770"
pep8-naming = "^0.10.0"
pylint = "^2.11"
pytest = "^5.4"
pytest-cov = "^2.9"
pytest-mock = "^3.1"
unify = "^0.5"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
